Fix extra scrollbar appearing on `<body>`

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -184,7 +184,6 @@ pre {
     width: 100%;
     max-width: 42rem;
     margin: 1rem;
-    overflow: scroll;
   }
 }
 
